配置更新